add hw week16-1

--- a/hw/hw.tex
+++ b/hw/hw.tex
@@ -256,6 +256,8 @@
 \DeclareMathOperator{\LT}{LT}
 \DeclareMathOperator{\Max}{Max}
 
+\DeclareMathOperator{\gr}{gr}
+
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
 \DeclarePairedDelimiter{\gen}{\langle}{\rangle} % generator
@@ -369,6 +371,7 @@
 \include{week13}
 \include{week14}
 \include{week15}
+\include{week16}
 
 %\printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
