--- a/hw/week15.tex
+++ b/hw/week15.tex
@@ -19,7 +19,7 @@
 \begin{exercise}
   $\ $
   \begin{enumerate}
-    \item Find $\Ext_{\Zb/n\Zb}^n (\Zb/d\Zb, N)$ for $n \geq 0, d \mid m$.
+    \item Find $\Ext_{\Zb/m\Zb}^n (\Zb/d\Zb, N)$ for $n \geq 0, d \mid m$.
     \item Find $\Ext_{\Zb/p^2\Zb}^n (\Zb/p\Zb, \Zb/p\Zb)$ for $n \geq 0$.
   \end{enumerate}
 \end{exercise}
