--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 \usepackage{imakeidx}
 \usepackage{bm}
 \usepackage{bbm}
+\usepackage{stmaryrd}
 \usepackage{hvindex}
 \usepackage[normalem]{ulem}
 %%% fix bugs in hvindex .................
