一分錢一分貨，TPE → SFO (太便宜 → 鼠煩窩)

--- a/main.tex
+++ b/main.tex
@@ -261,6 +261,8 @@
 \newcommand\inj{\mathrm{inj}}
 \DeclareMathOperator{\im}{im}
 \newcommand\id{\mathbf{1}}
+\newcommand\df{\mathrm{d}_f}
+\newcommand\we{\wedge}
 
 %
 \newcommand{\Resf}[1]{\big|_{#1}}
@@ -395,6 +397,7 @@
 \fi
 \include{homology/week14}
 \include{homology/week15}
+\include{homology/week16}
 \printindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
