--- a/homology/week14.tex
+++ b/homology/week14.tex
@@ -64,7 +64,7 @@ could be easily find: Simply let $N = F$, a free module on the set $M$.
 Now we shall ask for any module $M$, does there exist $N \in \Mod_R$ such that
 N is injective and $0 \to M \to N$?
 
-\begin{theorem}[Boer's criterion] \label{thm:boers-criterion}
+\begin{theorem}[Baer's criterion] \label{thm:boers-criterion}
   $N$ is injective $\iff \forall I \subset R$, and a homomorphism
   $f$, there exists a homomorphism $h$
   such that the following diagram commutes:
@@ -182,7 +182,7 @@ N is injective and $0 \to M \to N$?
               0 \ar[r]  & M_1 \ar[r,"\alpha"] \ar[d, "f"] & M_2 \ar[ld, 
               "\exists h (?)",dashed] \\
                         & N \ar[r, draw=none, "\cong" description]&  
-                        Hom_\Zb(R, N_0) \\
+                        \Hom_\Zb(R, N_0) \\
                         & f(x) \ar[u, contains] \\
             \end{tikzcd}
             \begin{tikzcd}[contains/.style = {draw=none, 
