--- a/main.tex
+++ b/main.tex
@@ -261,7 +261,7 @@
 \newcommand\inj{\mathrm{inj}}
 \DeclareMathOperator{\im}{im}
 \newcommand\id{\mathbf{1}}
-\newcommand\df{\mathrm{d}_f}
+\newcommand\dd{\mathrm{d}}
 \newcommand\we{\wedge}
 
 %
